# Parking-database

./: .env  .env_template  README.md  commands.txt  config.py  docker-compose.yml  pyproject.toml  requirements.txt  task.md
application/: app.py
application/docs/: check_out_parkings_delete.yml  client_parkings_post.yml  clients_add_client_post.yml  clients_client_id_get.yml  clients_get.yml  parking_add_parking_post.yml
migrations/: env.py
migrations/versions/: 3ad7a89b90c7_changed_clientparking_attributes.py  8fe7372bcddc_added_opening_hours.py  a9a46ad3d01c_changed_check_in_attr.py  ecee6749e5ea_create_tables.py
models/: model.py
tests/: conftest.py  test_w_factory.py  test_wo_factory.py
