[tool.poetry]
name = "parking"
version = "0.1.0"
description = "project for working with parking slot"
authors = ["natalia_levant <an_smir@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = {extras = ["all"], version = "^3.1.0"}
sqlalchemy = {extras = ["all"], version = "^2.0.36"}
alembic = {extras = ["all"], version = "^1.14.0"}
flask-sqlalchemy = "^3.1.1"
pytest = "^8.3.3"
factory-boy = "^3.3.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.10"
flasgger = "^0.9.7.1"
black = "^24.10.0"
isort = "^5.13.2"
mypy = "^1.13.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 90
target-version = ['py310']
extend-exclude = '''
(
migration
)
'''

[tool.isort]
profile = "black"
line_length = 90
multi_line_output = 3
skip_gitignore = true
skip_glob = ["**/migration/*", "**/settings/*", "alembic"]

[tool.mypy]
explicit_package_bases = true
namespace_packages = true
ignore_missing_imports = true
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_reexport = true
exclude = ["context.pyi"]

[[tool.mypy.overrides]]
module = "linter_project.config.config"
ignore_errors = true

[[tool.mypy.overrides]]
module = "config.config"
ignore_errors = true

